# api-dw

./: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
docs/: api_description.md  inventory.md  prd_images.md  product.md  stores.md  swagger_responses.json  transactions.md
queries/: estoque_lojas.sql  img_produtos.sql  lojas.sql  movimentos_lojas.sql  produtos.sql
src/api_dw/: app.py  authentication.py  get_dados.py  swagger.py  tradutor.py  validacao_parametros.py
src/api_dw/static/: swagger.css
