[project]
name = "api-dw"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Puchalski",email = "gustavofzp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "np (>=1.0.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "async (>=0.6.2,<0.7.0)",
    "fastapi-pagination (>=0.15.6,<0.16.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)"
]

[tool.poetry]
packages = [{include = "api_dw", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
